test/ppx_repr/deriver/errors/unsupported_polyvar_inherit_case.ml
type s = [ `S ] [@@deriving repr]
type t = [ s | `T ] [@@deriving repr]
